--- a/config/config.json
+++ b/config/config.json
@@ -14,10 +14,10 @@
     "dialect": "mysql"
   },
   "production": {
-    "username": "root",
-    "password": null,
-    "database": "database_production",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
+    "username": "aknhmlfr",
+    "password": "jwv30UfZuzOWZeB-OiS9egFtqS7tzG_L",
+    "database": "aknhmlfr",
+    "host": "queenie.db.elephantsql.com",
+    "dialect": "postgres"
   }
 }
