--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "mustache-express": "^1.3.0",
+    "node-fetch": "^2.6.1",
     "pg": "^8.5.1",
     "sequelize": "^6.6.2"
   }
